--- a/src/css/panel.css
+++ b/src/css/panel.css
@@ -15,9 +15,6 @@
 	box-shadow: 0 0 50px #000;
 	-webkit-box-shadow: 0 0 50px #000;
 	-moz-box-shadow: 0 0 50px #000;
-	border-radius: 0;
-	-moz-border-radius: 0;
-	-webkit-border-radius: 0;
 }
 
 .ui .panel header {
