--- a/src/css/window.css
+++ b/src/css/window.css
@@ -12,7 +12,6 @@
 	background: -moz-radial-gradient(center, ellipse cover, #45484d 0%, #000 100%);
 	background: -webkit-radial-gradient(center, ellipse cover, #45484d 0%, #000 100%);
 	background: radial-gradient(ellipse at center, #45484d 0%, #000 100%);
-	opacity: 1;
 }
 
 .window .logo {
